# Gentrys-Quest-Ursina

./: .gitignore  Changelog.py  Game.py  GameConfiguration.py  GameStates.py  Options.py  README.md  Rules.py  ScoreManager.py  Statistics.py  main.py  pyproject.toml
Audio/: AudioSystem.py  desktop.ini
BraydenMesserschmidt/: BraydenMesserschmidt.py
Content/: CharacterTemplate.py  ContentManager.py  EnemyTemplate.py  WeaponTemplate.py
Content/Characters/: TestCharacter.py  TestSkill.py
Content/Enemies/: TestEnemy.py
Content/Gachas/: TestGacha.py  ValleyHighSchool.py
Content/Languages/: English.py  Japanese.py
Content/Maps/: TestMap.py
Entity/: Affiliation.py  AudioMapping.py  Buff.py  Effect.py  EntityIcon.py  EntityOverHead.py  EntityPool.py  Experience.py  GameEntity.py  GameEntityBase.py  GameUnit.py  Loot.py  Stat.py  StatBar.py  Stats.py  TextureMapping.py  UI.py
Entity/Artifact/: Artifact.py  (+4 more)
GPSystem/: GPRater.py  GPmain.py
Gacha/: Gacha.py  GachaTypes.py
Graphics/: Container.py  FadeScreen.py  GameButton.py  GameText.py  Gradient.py  Screen.py  Text.py
IO/: DataLoader.py
Input/: InputBox.py
Localization/: Language.py
Location/: Location.py  Map.py  MapDetailContainer.py  MapPreview.py
Online/: ServerConnection.py
Overlays/: NoficationsManager.py  Notification.py  NotificationsManager.py
Screens/: BackButton.py  MainMenu.py  Screen.py  ScreenManager.py
User/: Inventory.py  User.py  UserData.py
utils/: BooleanMethods.py  Event.py  ExceptionHandler.py  IntMethods.py  StringMethods.py  TypeMethods.py  UsernameToCharacter.py
(+157 files in other folders)
