[tool.poetry]
name = "gentrys-quest-ursina"
version = "1.0.0"
description = "The new Gentry's Quest in Ursina"
authors = ["Your Name <you@example.com>"]
license = "N/A"
readme = "README.md"
packages = [{include = "gentrys_quest_ursina"}]

[tool.poetry.dependencies]
python = "^3.11"
ursina = "^5.3.0"
gpsystem = {git = "https://github.com/GDcheeriosYT/GPSystem.git"}
pypresence = "^4.2.1"
argparse = "^1.4.0"
psutil = "^5.9.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
